Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15842

sanityn test_102: access via mount point '/mnt/lustre2' - stat data mismatch between fopen and fhandle case

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for John Hammond <jhammond@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/0bd259ce-bf83-4f5d-aec6-54b4df1fe933

      test_102 failed with the following error:

      check_fhandle_syscalls d102.sanityn.remote/subdir fail
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanityn test_102 - check_fhandle_syscalls d102.sanityn.remote/subdir fail

            jhammond John Hammond
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: