LU-15842 osd-zfs: report a logical size for directories

sanityn test_102 fails intermittently on ZFS, comparing a directory's
stat data taken through two mounts of the same filesystem.
check_fhandle_syscalls.c compares st_dev, st_ino, st_mode, st_mtime and
st_size, and names the field that differed:

  st_size mismatch: open <sampled before the sync>,
                    open_by_handle_at <sampled after it>

The reported failure is on d102.sanityn.remote/subdir, which sanityn
creates with "lfs mkdir -c -1"; the sizes seen for each directory shape
are in the table below.

osd_attr_get() discards a directory's logical size and substitutes DMU
space accounting instead:

	sa_object_size(obj->oo_sa_hdl, &blksize, &blocks);
	if (S_ISDIR(attr->la_mode))
		attr->la_size = 512 * blocks;

sa_object_size() reads dn_phys, the on-disk dnode, whose dn_used is
updated only from syncing context.  A directory's reported size
therefore changes when the txg syncs, and a txg sync performs no
metadata operation:
no MDS_INODELOCK_UPDATE is revoked, so no client cache is invalidated.
A client that sampled before the sync keeps serving the old value under
a lock that is still perfectly valid, while a second mount that samples
afterwards gets a different, equally valid value.  Nothing the client
can do closes that gap, because from the DLM's point of view nothing
changed.

Report the ZAP's logical length instead.  dn_maxblkid is advanced in
open context, in the same tx that adds the dirent, so it moves only
under a lock the client has to reacquire.  la_blocks is left as physical
accounting, which is what st_blocks is meant to be everywhere else.
osd-ldiskfs already reports a logical i_size for directories, which is
why this has always been a ZFS-only failure.

That covers a directory that grows, which is what the reported failure
is.  It is not symmetric: zap_shrink() frees an emptied tail leaf and
dnode_sync_free_range_impl() lowers dn_phys->dn_maxblkid only, from
syncing context, while the in-core dn_maxblkid is never lowered
(dnode_new_blkid() returns early for a smaller blkid).  A directory that
shrinks therefore keeps the larger size until its dnode is evicted and
reloaded, and reports the smaller one afterwards.  Creating and then
unlinking 20000 entries gave 2564096 before and 2465792 after exporting
and importing the pool.  Squeezing the ARC with the filesystem still
mounted did not move it, but that is not a bound on when it can surface:
the dnode stays pinned only while the osd_object is cached, and
lu_site_purge() drops idle objects under memory pressure.  No
client-visible disagreement was produced either way.  Making the size
stable in both directions means maintaining it in the SA as osd-ldiskfs
does, which is a larger change than this one.

Measured on a 4-MDT ZFS DNE cluster with a probe that creates a
directory and stats it through two mounts either side of a "zpool sync"
that touches nothing.  The last column is the pair of sizes the two
mounts reported without the patch:

                        before          after   sizes seen before
  mkdir                 20/20 mismatch  0/20    512 -> 7680
  lfs mkdir -i 1        20/20 mismatch  0/20    1024 -> 7168
  lfs mkdir -c -1       20/20 mismatch  0/20    22528 -> 28672

Over 120 runs of sanityn test_102 on the same clusters, classified by
failure signature, the mismatch appears 10 times without this patch and
0 times with it.

With the patch a directory reports 16384 per stripe and keeps it: 16384
for a plain or remote one, and 65536 for "lfs mkdir -c -1" across four
MDTs, since the client sums the stripes in lmv_merge_attr().  Exporting
and importing all eight pools, which evicts and reloads every dnode from
disk, leaves 30 directories reporting identical sizes.

(dn_maxblkid + 1) * dn_datablksz is exactly what
dmu_object_info_from_dnode() computes for doi_max_offset, in 2.0.0 and
2.4.0.  That helper is deliberately not used: it takes dn_struct_rwlock and dn_mtx and sums dn_nblkptr block pointers for doi_fill_count, so
calling it on every directory getattr serialises operations on a hot
directory through an exclusive mutex.  Both fields are already read
without those locks elsewhere in osd-zfs, and a directory's la_size is
only ever reported by stat(), never used to size a write.

sanityn test_102 only catches this when the two stats happen to straddle
a txg sync, so add sanityn test_122, which stats a plain, a remote and a
striped directory through both mounts either side of a deliberate sync.

While here, only count the directory entries when the caller asks for
them.  osd_attr_get() called zap_count() for every directory getattr,
but la_dirent_count feeds the automatic directory split, which is off by
default, so the work was usually wasted.  osd-ldiskfs already gates it
on LA_DIRENT_CNT; do the same here.  The request has to be latched
before *attr = obj->oo_attr, which overwrites la_valid - osd-ldiskfs is
not exposed to that because osd_inode_getattr() ORs its bits in instead.

conf-sanity's t32_test() verifies an upgraded image by diffing an
"ls -Rni" listing against one recorded when the image was made, and that
listing includes the directory size, so it fails on every ZFS image once
the reported size changes.  The helper is shared by test_32a through
test_32j, so all ten variants are affected.  Nothing else in the listing
moves: of 48 differing lines, 48 are directories and the inodes, modes,
owners, timestamps and file sizes all still match.  Normalise that one
column out of both sides before the comparison, as the test already does
for inode numbers when the image came from an architecture with a
different long.

This does not make st_blocks coherent: it is physical accounting and
still settles at txg sync, as it does on any filesystem.  It is
deliberately not added to check_fhandle_syscalls.

Fixes: 234ce16dba60 ("LU-1943 zfs-osd: different fixes for zfs")
Test-Parameters: optional fstype=zfs mdscount=2 mdtcount=4 testlist=sanityn env=ONLY=102,ONLY_REPEAT=300
Test-Parameters: optional fstype=zfs mdscount=2 mdtcount=4 testlist=sanityn env=ONLY=122,ONLY_REPEAT=100
Signed-off-by: Oleg Drokin <green@whamcloud.com>
Assisted-by: ClaudeCode:Opus-5 llm_code_and_review_tools
Change-Id: Ia5ea5bd60cf96c3a428733ab653c1e487a8d8ac7
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/68154
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>